# storm-client-invenio

./: .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: record-deposit.py
examples/data/: alice.txt
invenio_client/: __init__.py  invenio.py  network.py  object_factory.py  store.py  version.py
invenio_client/models/: __init__.py  base.py  serializer.py
invenio_client/models/record/: __init__.py  base.py  files.py  link.py  model.py  type.py
invenio_client/services/: __init__.py  accessor.py  base.py  record.py  search.py
storm_client_invenio/: __init__.py  invenio.py  network.py  object_factory.py  store.py  version.py
storm_client_invenio/models/: __init__.py  base.py  serializer.py
storm_client_invenio/models/record/: __init__.py  base.py  files.py  link.py  model.py  type.py
storm_client_invenio/services/: __init__.py  accessor.py  base.py  record.py  search.py
tests/: conftest.py  test_invenio_client.py
